# kontext

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: lint-api.yaml  lint-shared.yaml  lint-web.yaml  setup.yaml  test-api.yaml  test-shared.yaml  test-web.yaml  test.yaml  tests-todo.md
_apiold/: Dockerfile
_apiold/handlers/: types.go
_apiold/routes/: routes.go
_glideold/: go.sum
api/: Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
api/config/: config.go
api/handlers/: get_cluster_by_id.go  (+5 more)
apiold/: go.sum
docs/: CONTRIBUTING.md  TROUBLESHOOTING.md
glide/: Cargo.toml  README.md  go.mod  go.sum  main.go
glideold/: Dockerfile  main.go
jmx/: jmx_password
qdrant_data/: raft_state.json
scripts/: beans.sh  run.sh  setup.sh  test.sh
services/api/: .dockerignore  .env.example  .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  go.mod  go.sum  main.go
services/api/config/: config.go
services/api/handlers/: 404.go  get_clusters.go  get_topics.go  health.go  root.go
services/api/services/: kafka.go
services/api/src/: app_state.rs  handlers.rs  lib.rs  main.rs  router.rs  shared.rs
services/api/src/handlers/: fallback_404.rs  fallback_405.rs  health.rs  health_check.rs  root.rs  test_handler.rs
services/api/src/shared/: fallback_response.rs
services/api/tests/: fallback_404.rs  fallback_405.rs  health_check.rs  main.rs  root.rs
services/api/types/: kafka_types.go
services/shared/: Cargo.toml  README.md
services/shared/src/: clients.rs  config.rs  lib.rs
services/shared/src/clients/: kafka.rs  postgres.rs
services/shared/src/config/: kafka.rs  postgres.rs  tracing.rs
shared/: Cargo.toml
web/: Dockerfile  package-lock.json
(+99 files in other folders)
