[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3" }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
dotenvy = "0.15"
shared = { path = "../shared" }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "compression-zstd",
    "trace",
    "timeout",
] }
http = "1.1.0"
