[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
dotenvy = "0.15"
shared = { path = "../shared" }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "compression-zstd",
    "trace",
    "timeout",
] }
http = "1.1.0"
hyper = { version = "1.6.0", features = ["full"] }
http-body = "1.0.0"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
thiserror = "2.0.12"
axum-extra = "0.10.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
[dev-dependencies]
hyper-util = { version = "0.1.0", features = ["client", "server"] }
