[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
rdkafka = "0.37.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
